challenge-solution/kubernetes-setup/sample-helloworld/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: dev
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  type: NodePort
  ports:
  - port: 80
    targetPort: 9292
    nodePort: 9393
    protocol: TCP
