challenge-solution/kubernetes-setup/sample-helloworld/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-myservice
  namespace: dev
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - backend:
          service:
            name: my-service
            port:
              number: 8080
        path: /
        pathType: Prefix
